# Employee-management-system

./: CMakeCache.txt  CMakeLists.txt  Makefile  ManagementSystem  cmake_install.cmake
include/: menu.h  person.h  staff.h
src/: main.cpp  menu.cpp  person.cpp  staff.cpp
